--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,13 @@
 DESCRIPTION:
   Package: NCME 2022 Demonstration
   Title: Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research
+  Description: A GitHub repo providing source code associated with the NCME 2022 group demonstration session showcasing novel uses of GitHub 
+    for coordinating development and dissemination of research in educational assessment.
   Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
            person(given=c("Adam", "R."), family="Van Iwaarden", email="avaniwaarden@gmail.com", role="aut"),
            person(given=c("Nathan"), family="Dadey", email="ndadey@nciea.org", role="aut"),
            person(given=c("Allie"), family="Cooperman", email="coope782@umn.edu", role="aut"))
-  License: GPL-3
+  License: CC BY-SA 4.0
   BugReports: https://github.com/CenterForAssessment/NCME_2022_Demonstration/issues
 
 template:
@@ -32,8 +34,8 @@ navbar:
         href: articles/presentations/Demonstration_Session_Presentations.html#web-based-distribution-of-research-using-github
       - text: "Using GitHub and RMarkdown for report generation and dissemination"
         href: articles/presentations/Demonstration_Session_Presentations.html#using-github-rmarkdown-for-report-generation-and-dissemination
-      - text: "Using GitHub to consolodate the analysis and dissemination of research"
-        href: articles/presentations/Demonstration_Session_Presentations.html#using-github-to-consolodate-the-analysis-and-dissemination-of-research
+      - text: "Using GitHub to consolidate the analysis and dissemination of research"
+        href: articles/presentations/Demonstration_Session_Presentations.html#using-github-to-consolidate-the-analysis-and-dissemination-of-research
     - text: Documents
       menu:
       - text: "Flexible Report Generation"
